added unit test happy paths, added dummy data and change response controllers.
